[gd_scene load_steps=26 format=3 uid="uid://bs8pplwxac16b"]

[ext_resource type="Script" uid="uid://cldoehghbvfaf" path="res://Game/Scenes/character_main.gd" id="1_lseat"]
[ext_resource type="Texture2D" uid="uid://b6frvgivk8i42" path="res://Game/Images/Character_1.png" id="1_oesdg"]
[ext_resource type="Texture2D" uid="uid://dgqrixtbf2rms" path="res://Game/Images/Character_Idle.png" id="3_p1gmm"]
[ext_resource type="Texture2D" uid="uid://cqg10nhxj2arv" path="res://Game/Images/Character_Walk.png" id="4_jdkkr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lseat"]
radius = 34.0
height = 268.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p1gmm"]
atlas = ExtResource("1_oesdg")
region = Rect2(0, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdkkr"]
atlas = ExtResource("3_p1gmm")
region = Rect2(0, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbaht"]
atlas = ExtResource("3_p1gmm")
region = Rect2(204, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsxpr"]
atlas = ExtResource("3_p1gmm")
region = Rect2(408, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcwj4"]
atlas = ExtResource("3_p1gmm")
region = Rect2(612, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_kevyi"]
atlas = ExtResource("4_jdkkr")
region = Rect2(0, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_abfvq"]
atlas = ExtResource("4_jdkkr")
region = Rect2(204, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh1gs"]
atlas = ExtResource("4_jdkkr")
region = Rect2(408, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpaom"]
atlas = ExtResource("4_jdkkr")
region = Rect2(612, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yw0o"]
atlas = ExtResource("4_jdkkr")
region = Rect2(816, 0, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaq32"]
atlas = ExtResource("4_jdkkr")
region = Rect2(0, 372, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_dksee"]
atlas = ExtResource("4_jdkkr")
region = Rect2(204, 372, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg15h"]
atlas = ExtResource("4_jdkkr")
region = Rect2(408, 372, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyhn7"]
atlas = ExtResource("4_jdkkr")
region = Rect2(612, 372, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf8xn"]
atlas = ExtResource("4_jdkkr")
region = Rect2(816, 372, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga3p6"]
atlas = ExtResource("4_jdkkr")
region = Rect2(0, 744, 204, 372)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwf80"]
atlas = ExtResource("4_jdkkr")
region = Rect2(204, 744, 204, 372)

[sub_resource type="SpriteFrames" id="SpriteFrames_jdkkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1gmm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdkkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbaht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsxpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcwj4")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kevyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abfvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh1gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpaom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yw0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaq32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dksee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg15h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyhn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf8xn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga3p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwf80")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lseat"]
size = Vector2(70, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1gmm"]
size = Vector2(70, 300)

[node name="Node2D" type="Node2D"]

[node name="Character_Main" type="CharacterBody2D" parent="."]
script = ExtResource("1_lseat")

[node name="Collision_Enviorment" type="CollisionShape2D" parent="Character_Main"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_lseat")

[node name="Sprite_Character_Main" type="AnimatedSprite2D" parent="Character_Main"]
sprite_frames = SubResource("SpriteFrames_jdkkr")
animation = &"walk"
autoplay = "idle"
frame_progress = 0.425832

[node name="Area2D_for_Objects" type="Area2D" parent="Character_Main"]
collision_layer = 2
collision_mask = 2

[node name="Collision_Object_Left" type="CollisionShape2D" parent="Character_Main/Area2D_for_Objects"]
position = Vector2(-35, 0)
shape = SubResource("RectangleShape2D_lseat")

[node name="Collision_Object_Right" type="CollisionShape2D" parent="Character_Main/Area2D_for_Objects"]
position = Vector2(35, 0)
shape = SubResource("RectangleShape2D_p1gmm")
disabled = true
